--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Eigakan",
+    "name": "eigakan/eigakan",
     "type": "project",
     "description": "Movie database app",
     "keywords": ["framework", "laravel"],
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.8",
+        "spatie/laravel-view-models": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
