--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "eigakan/eigakan",
+    "name": "haneure/eigakan",
     "type": "project",
     "description": "Movie database app",
     "keywords": ["framework", "laravel"],
